--- a/style.css
+++ b/style.css
@@ -1,32 +1,156 @@
-body {
-  padding-left: 11em;
-  font-family: Georgia, "Times New Roman",
-        Times, serif;
-  color: purple;
-  background-color: #d8da3d }
-ul.navbar {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
-  position: absolute;
-  top: 2em;
-  left: 1em;
-  width: 9em }
-h1 {
-  font-family: Helvetica, Geneva, Arial,
-        SunSans-Regular, sans-serif }
-ul.navbar li {
-  background: white;
-  margin: 0.5em 0;
-  padding: 0.3em;
-  border-right: 1em solid black }
-ul.navbar a {
-  text-decoration: none }
-a:link {
-  color: blue }
-a:visited {
-  color: purple }
-address {
-  margin-top: 1em;
-  padding-top: 1em;
-  border-top: thin dotted }
+@charset "utf-8";
+/* CSS Document */
+body{
+	margin:0;
+	padding:0;
+	font-family:"宋体";
+	font-size:14px;
+}
+a{
+	text-decoration:none;
+}、
+a:hover{
+	color:#F00;
+}
+ul,h2{
+	margin:0;
+	padding:0;
+	list-style:none;
+}
+.wrap{
+	width:1080px;
+	height:auto;
+	margin:0 auto;
+}
+.header{
+	position:relative;
+	width:100%;
+	height:60px;
+	float:left;
+	text-align:center;
+	background:#000;
+}
+.login{
+	width:120px;
+	height:30px;
+	position:absolute;
+	top:10px;
+	right:10px;
+	z-index:1;
+	color:#FFF;
+}
+.login a{
+	font-size:14px !important;
+	color:#FFF;
+	margin:0px !important;
+}
+.header a{
+	font-family: "微软雅黑";
+	font-size: 18px;
+	line-height: 60px;
+	color:#FFF;
+	margin:0 30px;
+	padding:5px 0;
+}
+.header a:hover,.header a.actve{ border-bottom:solid 3px #68dbde;}
+.banner{
+	position:relative;
+	width:100%;
+	height:;
+	float:left;
+}
+.banner .title{
+	width:300px;
+	height:80px;
+	position:absolute;
+	top:90px;
+	left:400px;
+	z-index:1;
+	color:#FFF;
+	line-height:40px;
+}
+.bt{
+	width:100%;
+	height:97px;
+	background:url(../img/title_bg.jpg);
+	text-align:center;
+	line-height:97px;
+	font-size:32px;
+	color:#000;
+	float:left;
+	font-family:"微软雅黑";
+}
+.box{
+	width:100%;
+	height:auto;
+	float:left;
+	padding:30px 0;
+}
+.box1{
+	width:100%;
+	height:auto;
+	float:left;
+}
+.fr{float:right;}
+.fl{float:left; margin-right:5px;}
+.photo{
+	width:290px;
+	height:440px;
+	float:left;
+	margin-left:140px;
+	border:solid 3px #65ccc9;
+	position:relative;
+}
+.photo img{
+	width:296px;
+	height:395px;
+	position:absolute;
+	top:23px;
+	left:28px;
+	z-index:1px;
+}
+.text{
+	width:393px;
+	height:auto;
+	float:left;
+	margin-top:35px;
+	margin-left:100px;
+}
+.text1{
+	width:90%;
+	height:auto;
+	float:left;
+	margin-left:5%;
+}
+.z p{
+	font-size:16px;
+	line-height:30px;
+	text-indent:35px;
+}
+.gallery{ margin-left:45px;}
+.gallery li img{
+	float:left;
+	width:190px;
+	height:210px;
+	border:solid 2px #5cced2;
+	margin:30px;
+}
+.tu img{
+	width:430px;
+	margin:0 20px;
+	float:left;
+}
+.ys{
+	width:220px;
+	height:28px;
+}
+.footer{
+	width:100%;
+	height:40px;
+	background:#000;
+	float:left;
+	color:#FFF;
+	text-align:center;
+	line-height:40px;
+	margin-top:30px;
+}
